<?xml version="1.0"?>
<package format="2">
  <name>rosplan_chimp_demo</name>
  <version>0.0.0</version>
  <description>Simple demo using ROSPlan with the planner CHIMP</description>

  <maintainer email="sebastian.stock@dfki.de">Sebastian Stock</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/KCL-Planning/rosplan_demos</url>
  <author email="sebasitan.stock@dfki.de">Sebastian Stock</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
