<?xml version="1.0"?>
<package>
 <name>rosplan_csp_exec_demo</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="oscar.lima@dfki.de">Oscar Lima</author>
 <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>TODO</build_depend>

 <run_depend>TODO</run_depend>

</package>
