<?xml version="1.0"?>
<package>
  <name>rosplan_htn_demo</name>
  <version>1.0.0</version>
  <description>
    ROSPlan HTN (Hierarchical Task Network) demo with HDDL formalism
  </description>

  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>BSD</license>
  <url type="website">http://github.com/KCL-Planning/rosplan_demos</url>
  <author email="oscar.lima@dfki.de">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
